--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <div class="instagram-link">
             <p>Suruchi, you are my everything! ❤</p>
             <p>Follow me on Instagram:
-                <a href="https://www.instagram.com/yourusername/" target="_blank">
+                <a href=https://www.instagram.com/gupta__aditya_01?igsh=cjFiNzlmcHYycTM3" target="_blank">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/800px-Instagram_logo_2022.svg.png" class="instagram-logo" alt="Instagram Logo"> @yourusername
                 </a>
             </p>
