--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
     <div id="imageModal" class="modal">
         <span class="close-btn" onclick="closeModal()">×</span>
-        <img src="asset/image/balllon.png" alt="Proposal Image">
+        <img src="asset/image/Aditya.jpg" alt="Proposal Image">
     </div>
 
     <!-- Instagram Link Modal -->
