--- a/raja.html
+++ b/raja.html
@@ -219,7 +219,7 @@
             <div class="carousel-box">
                 <div class="title">Hi 👋</div>
                 <div class="num">01</div>
-                <img src="https://iili.io/2C06ebn.jpg" />
+                <img src="https://i.postimg.cc/k5KWFGf3/1.jpg" />
             </div>
         </div>
 
@@ -227,7 +227,7 @@
             <div class="carousel-box">
                 <div class="title">I want to tell you Something 😍</div>
                 <div class="num">02</div>
-                <img src="https://iili.io/2C06vxs.jpg" />
+                <img src="https://i.postimg.cc/1RGvwpHH/6.jpg" />
             </div>
         </div>
 
@@ -235,7 +235,7 @@
             <div class="carousel-box">
                 <div class="title">Please Keep Dragging 😊</div>
                 <div class="num">03</div>
-                <img src="https://iili.io/2C06OOX.jpg" />
+                <img src="https://i.postimg.cc/7hbHSxz8/5.jpg" />
             </div>
         </div>
 
@@ -243,7 +243,7 @@
             <div class="carousel-box">
                 <div class="title">You are Amazing 🤩</div>
                 <div class="num">04</div>
-                <img src="https://iili.io/2C064g2.jpg" />
+                <img src="https://i.postimg.cc/qBDrKhGz/3.jpg" />
             </div>
         </div>
 
@@ -251,7 +251,7 @@
             <div class="carousel-box">
                 <div class="title">Most Beautiful Person on Earth 💯</div>
                 <div class="num">05</div>
-                <img src="https://iili.io/2C06mqx.jpg" />
+                <img src="https://i.postimg.cc/YCs5Z1TF/7.jpg" />
             </div>
         </div>
 
@@ -259,7 +259,7 @@
             <div class="carousel-box">
                 <div class="title">And Cutest 🎀</div>
                 <div class="num">06</div>
-                <img src="https://iili.io/2nKCPfa.jpg" />
+                <img src="https://i.postimg.cc/qBDrKhGz/3.jpg" />
             </div>
         </div>
 
@@ -267,7 +267,7 @@
             <div class="carousel-box">
                 <div class="title">And Since i met You 😗</div>
                 <div class="num">07</div>
-                <img src="https://iili.io/2C06Dsj.jpg" />
+                <img src="https://i.postimg.cc/DytKC9Hh/2.jpg" />
             </div>
         </div>
 
@@ -275,7 +275,7 @@
             <div class="carousel-box">
                 <div class="title">I feel very Lucky Everyday 😇</div>
                 <div class="num">08</div>
-                <img src="https://iili.io/2C06tWb.jpg" />
+                <img src="https://i.postimg.cc/LX6dY2Yt/4.jpg" />
             </div>
         </div>
 
@@ -283,7 +283,7 @@
             <div class="carousel-box">
                 <div class="title">and I have Crush on You 🥰</div>
                 <div class="num">09</div>
-                <img src="https://iili.io/2C06Zzu.jpg" />
+                <img src="https://i.postimg.cc/7hfp99Nb/8.jpg" />
             </div>
         </div>
 
@@ -296,7 +296,7 @@
         </div>
     </div>
 
-    <a href="https://www.instagram.com/college_wishlist" target="_blank" class="logo">C</a>
+    <a href="https://www.instagram.com/college_wishlist" target="_blank" class="logo"></a>
     <div class="social">
         <a href="#" target="_blank"><svg><use xlink:href="#ico-linkedin"></use></svg></a>
         <a href="https://www.instagram.com/college_wishlist" target="_blank"><svg><use xlink:href="#ico-instagram"></use></svg></a>
