--- a/raja.html
+++ b/raja.html
@@ -283,7 +283,7 @@
             <div class="carousel-box">
                 <div class="title">and I have Crush on You 🥰</div>
                 <div class="num">09</div>
-                <img src="https://i.postimg.cc/7hfp99Nb/8.jpg" />
+                <img src="https://i.postimg.cc/d00PDJT8/8-2.jpg" />
             </div>
         </div>
 
@@ -294,12 +294,6 @@
                 <img src="https://i.postimg.cc/K8fkrznv/Screenshot-20250111-070856-2.jpg" />
             </div>
         </div>
-    </div>
-
-    <a href="https://www.instagram.com/college_wishlist" target="_blank" class="logo"></a>
-    <div class="social">
-        <a href="#" target="_blank"><svg><use xlink:href="#ico-linkedin"></use></svg></a>
-        <a href="https://www.instagram.com/college_wishlist" target="_blank"><svg><use xlink:href="#ico-instagram"></use></svg></a>
     </div>
 
     <svg style="display: none">
