--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             margin-top: 30px;
             padding: 10px 20px;
             font-size: 1.2em;
-            color: #ffffff;
+            color: #FF3333;
             background-color: #eb7c7c;
             border: none;
             border-radius: 5px;
@@ -217,7 +217,7 @@
 
     <div id="imageModal" class="modal">
         <span class="close-btn" onclick="closeModal()">×</span>
-        <img src="asset/image/Aditya.jpg" alt="Proposal Image">
+        <img src="asset/image/ballon.jpg" alt="Proposal Image">
     </div>
 
     <!-- Instagram Link Modal -->
@@ -225,8 +225,8 @@
         <div class="instagram-link">
             <p>Suruchi, you are my everything! ❤</p>
             <p>Follow me on Instagram:
-                <a href=https://www.instagram.com/gupta__aditya_01?igsh=cjFiNzlmcHYycTM3" target="_blank">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/800px-Instagram_logo_2022.svg.png" class="instagram-logo" alt="Instagram Logo"> @yourusername
+                <a href="https://www.instagram.com/devil__king________001?igsh=cGg3ZHp4Y280MXNk" target="_blank">
+                    <img src="" class="instagram-logo" alt="Instagram Logo"> @insta message 
                 </a>
             </p>
         </div>
