--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             margin-top: 30px;
             padding: 10px 20px;
             font-size: 1.2em;
-            color: #FF3333;
+            color: #FFFFFF;
             background-color: #eb7c7c;
             border: none;
             border-radius: 5px;
@@ -147,7 +147,7 @@
         }
         
         .button:hover {
-            background-color: #e63946;
+            background-color: #FF6666;
         }
         
         .modal {
