--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
     <div id="imageModal" class="modal">
         <span class="close-btn" onclick="closeModal()">×</span>
-        <img src="asset/image/ballon.jpg" alt="Proposal Image">
+        <img src="asset/image/1000_F_237419692_GT0NYHSWEhtkfGfomAt46ysBe5oHWJMd.webp" alt="Proposal Image">
     </div>
 
     <!-- Instagram Link Modal -->
