--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <p>Suruchi, you are my everything! ❤</p>
             <p>Follow me on Instagram:
                 <a href="https://www.instagram.com/devil__king________001?igsh=cGg3ZHp4Y280MXNk" target="_blank">
-                    <img src="" class="instagram-logo" alt="Instagram Logo"> @insta message 
+                    <img src="" class="instagram-logo"  @insta message 
                 </a>
             </p>
         </div>
