--- a/index.html
+++ b/index.html
@@ -225,8 +225,9 @@
         <div class="instagram-link">
             <p>Suruchi, you are my everything! ❤</p>
             <p>Follow me on Instagram:
-                <a href="https://www.instagram.com/devil__king________001?igsh=cGg3ZHp4Y280MXNk" target="_blank">
-                    <img src="" class="instagram-logo"  @insta message 
+                 <a href="https://www.instagram.com/devil__king________001/" target="_blank">
+                    <img src="" class="instagram-logo" alt="insta messege"> insta messege
+                </a
                 </a>
             </p>
         </div>
