--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <p>Suruchi, you are my everything! ❤</p>
             <p>Follow me on Instagram:
                  <a href="https://www.instagram.com/devil__king________001/" target="_blank">
-                    <img src="" class="instagram-logo" alt="insta messege"> insta messege
+                    <img src="" class="instagram-logo" alt="insta messege"> 
                 </a
                 </a>
             </p>
