--- a/index.html
+++ b/index.html
@@ -232,9 +232,9 @@
         <div class="instagram-link">
             <p>Suruchi, you are my everything!💖</p>
             <p>Follow me on Instagram:     
-                 <a href="https://www.instagram.com/devil__king________001/" target="_blank"><P>
-                     insta messege</P>
-                </a
+                 <a href="https://www.instagram.com/devil__king________001/" target="_blank">
+                     <P>insta messege</P>
+                
                 </a>
             </p>
         </div>
