--- a/raja.html
+++ b/raja.html
@@ -291,7 +291,7 @@
             <div class="carousel-box">
                 <div class="title">I love You ❤️</div>
                 <div class="num">10</div>
-                <img src="https://i.postimg.cc/K8fkrznv/Screenshot-20250111-070856-2.jpg" />
+                <img src="https://ibb.co/NnCjg7BB" />
             </div>
         </div>
     </div>
