--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proposal for Naina</title>
+    <title>Proposal for Naina kashyap</title>
     <style>
         body {
             margin: 0;
@@ -230,7 +230,7 @@
 
     <div class="container">
         <div class="heart"></div>
-        <h1>Naina,Will You Be Mine Forever?</h1>
+        <h1>Naina kashyap, Will You Be Mine Forever?</h1>
         <h2>You make my world brighter, and my heart beats for you. 💖</h2>
     </div>
     <div class="button-container">
@@ -245,7 +245,7 @@
     <!-- Instagram Link Modal -->
     <div id="instagramModal" class="modal">
         <div class="instagram-link">
-            <p1>Naina, you are my everything!💖</p1>
+            <p1>Naina kashyap, you are my everything!💖</p1>
             <p>Follow me on Instagram:
                 <a href="https://www.instagram.com/devil__king________001/" target="_blank">
                     <P>insta messege</P>
