--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
     <div id="imageModal" class="modal">
         <span class="close-btn" onclick="closeModal()">×</span>
-        <img src="asset/image/1000_F_237419692_GT0NYHSWEhtkfGfomAt46ysBe5oHWJMd.webp" alt="Proposal Image">
+        <img src="asset/images/IMG_20250224_121152.jpg" alt="Proposal Image">
     </div>
 
     <!-- Instagram Link Modal -->
@@ -247,7 +247,7 @@
         <div class="instagram-link">
             <p1>Naina kashyap, you are my everything!💖</p1>
             <p>Follow me on Instagram:
-                <a href="https://www.instagram.com/devil__king________001/" target="_blank">
+                <a href="https://www.instagram.com/yugeshwar_kashyap__001/" target="_blank">
                     <P>insta messege</P>
 
                 </a>
